--- a/Grafos_2.cbp
+++ b/Grafos_2.cbp
@@ -31,6 +31,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="ArtGrafos.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="ArtGrafos.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
